<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tipcaculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="text_hint">Enter bill amount</string>
    <string name="txt_result">0</string>

</resources>
