<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/txBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_ten_percent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/text_hint" />

    <Button
        android:id="@+id/btn_ten_percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/txBillAmount"
        android:onClick="tenPercentTip"
        android:text="@string/ten_percent" />

    <Button
        android:id="@+id/btn_fifteen_percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_ten_percent"
        android:layout_alignBottom="@+id/btn_ten_percent"
        android:layout_toRightOf="@+id/btn_ten_percent"
        android:onClick="fifteenPercentTip"
        android:text="@string/fifteen_percent" />

    <EditText
        android:id="@+id/txResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txBillAmount"
        android:layout_below="@+id/txBillAmount"
        android:text="@string/txt_result" />

    <Button
        android:id="@+id/btn_twenty_percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txResult"
        android:layout_alignBottom="@+id/txResult"
        android:layout_toRightOf="@+id/txResult"
        android:onClick="twentyPercentTip"
        android:text="@string/twenty_percent" />

</RelativeLayout>
